--- a/css/taskDay14.css
+++ b/css/taskDay14.css
@@ -2,6 +2,7 @@
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
+    font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 html,
@@ -17,50 +18,168 @@ body {
 
 nav {
     width: 100%;
-    height: 60px;
-    background-color: grey;
+    height: 50px;
+    background-color: #222222ea;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 2%; 
+    gap: 2%;
+    position: fixed;
+    z-index: 1;
 }
 
-nav a{
-    text-decoration: none;
+nav i {
     color: white;
+    font-size: 15px;
 }
-#center{
+
+nav a {
+    font-size: 12px;
+    font-weight: 100;
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.716);
+}
+
+nav a:hover {
+    color: rgb(255, 255, 255);
+}
+
+.center {
     width: 100%;
-    height: 80%;
+    height: 97%;
     color: white;
     text-align: center;
-    padding-top: 50px;
-    background-image: url(https://www.apple.com/v/home/ci/images/heroes/iphone-17-pro/hero_iphone_17_pro__bknyzxfk2agi_large_2x.jpg);
+    padding-top: 100px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
-#center h1{
+
+#image1 {
+    background-image: url(https://www.apple.com/v/home/ci/images/heroes/iphone-17-pro/hero_iphone_17_pro__bknyzxfk2agi_large_2x.jpg);
+}
+
+.center h1 {
     font-size: 50px;
 }
-#center h4{
+
+.center h4 {
     font-size: 30px;
     font-weight: 400;
 }
-#link{
+
+.link {
     display: flex;
     justify-content: center;
     gap: 40px;
 }
-#link button{
+
+.link button {
     font-size: 15px;
     margin-top: 15px;
     padding: 14px 40px;
     border-radius: 30px;
-    border: none;
 }
-#link button:hover{
-    background-color: blue;
+
+.learn {
+    border: none;
+    color: white;
+    background-color: rgb(0, 128, 255);
+}
+
+button:hover {
+    background-color: rgb(17, 134, 251);
     color: white;
 }
 
+#image2 {
+    height: 85%;
+    color: black;
+    background-image: url(https://www.apple.com/v/home/ci/images/heroes/iphone-air/hero_iphone_air__0gxyavihpiqu_large_2x.jpg);
+}
+
+.buy {
+    border: 2px solid rgb(0, 128, 255);
+    background-color: transparent;
+    color: rgb(0, 128, 255);
+}
+
+#image3 {
+    height: 85%;
+    background-image: url(https://www.apple.com/v/home/ci/images/heroes/macbook-pro-m5/hero_macbook_pro_m5__fjgmapbkxo2u_large_2x.jpg);
+}
+
+/* main 2 */
+#main2 {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1%;
+    padding-top: 20px;
+}
+
+.link1 {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.link1 button {
+    font-size: 14px;
+    margin-top: 25px;
+    padding: 12px 30px;
+    border-radius: 30px;
+}
+
+.box {
+    width: 48%;
+    height: 65%;
+    flex-shrink: 0;
+    padding-top: 40px;
+    text-align: center;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.box h4 {
+    font-weight: 100;
+    font-size: 20px;
+}
+
+#box1 {
+
+    background-image: url(https://www.apple.com/v/home/ci/images/promos/apple-watch-series-11/promo_apple_watch_series_11__b63hxviqvonm_large_2x.jpg);
+}
+
+#box2 {
+    color: white;
+    background-image: url(https://www.apple.com/v/home/ci/images/promos/ipad-pro/promo_ipad_pro__c529dk533k4m_large_2x.jpg);
+}
+
+#box3 {
+    background-image: url(https://www.apple.com/v/home/ci/images/promos/airpods-pro-3/promo_airpodspro_3__f6xmza7bglei_large_2x.jpg);
+}
+
+#box4 {
+
+    background-image: url(https://www.apple.com/v/home/ci/images/promos/macbook-air/promo_macbook_air__fqowrtnxewqe_large_2x.jpg);
+
+}
+
+#box5 {
+
+    background-image: url(https://www.apple.com/v/home/ci/images/promos/iphone-tradein/promo_iphone_tradein__bugw15ka691e_large_2x.jpg);
+}
+
+#box5 sup {
+    font-size: 10px;
+}
+
+#box6 {
+
+    background-image: url(https://www.apple.com/v/home/ci/images/promos/apple-card/promo_apple_card__5cm7draujpey_large_2x.jpg);
+}
